--- a/JS Back End - Node.js - 2023/Cubicle Workshop/package.json
+++ b/JS Back End - Node.js - 2023/Cubicle Workshop/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
     "nodemon": "^2.0.22",
     "uniqid": "^5.4.0"
