--- a/JS Back End - Node.js - 2023/Gaming Team/package.json
+++ b/JS Back End - Node.js - 2023/Gaming Team/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/index"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,9 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "jwtoken": "^0.0.0",
-    "mongoose": "^7.2.3"
+    "mongoose": "^7.2.3",
+    "nodemon": "^2.0.22"
   }
 }
