--- a/JS Back End - Node.js - 2023/Gaming Team/package.json
+++ b/JS Back End - Node.js - 2023/Gaming Team/package.json
@@ -14,7 +14,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "jwtoken": "^0.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
     "nodemon": "^2.0.22"
   }
